# Analisis_de_tos_sintomatica_API

./: .dockerignore  API_Tos.py  Dockerfile  docker-compose.yml  documento_guia.md  main.py  pyproject.toml  requirements.txt  test_api.html
routers/: audio.py
services/: module1_intake.py  module2_yamnet.py  module3_greenarcade.py  module4_inference.py
