[project]
name = "api-deteccion-tos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "librosa==0.10.1",
    "soundfile==0.12.1",
    "tensorflow==2.15.0",
    "tensorflow-hub==0.16.1",
    "matplotlib==3.8.2",
    "huggingface-hub==0.19.4",
    "scikit-learn==1.3.2",
    "setuptools==69.5.1",
]
